@@ -340,6 +340,18 @@ public:
                                   wxClassInfo* textCtrlClass = wxCLASSINFO(wxTextCtrl));
 
     /**
+        Enable or disable a beep if there is no match for the currently
+        entered text when searching for the item from keyboard.
+
+        The default is to not beep in this case except in wxMSW where the
+        beep is always generated by the native control and cannot be disabled,
+        i.e. calls to this function do nothing there.
+
+        @since 2.9.5
+    */
+    void EnableBellOnNoMatch(bool on = true);
+
+    /**
         Ends label editing. If @a cancelEdit is @true, the edit will be
         cancelled.
 
